--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,12 @@
 <body>
 
     <h5>Musico</h5>
+    
+    <div class="row">
+        <div class="col-sm-2"><a href="{{ url_for('ArtistPage') }}">Artists/Composers</a></div>
+        <div class="col-sm-2"><a href="{{ url_for('GenrePage') }}">Genres</a></div>
+        <div class="col-sm-2"><a href="{{ url_for('SongPage') }}">Songs</a></div>
+    </div>
 
 </body>
 
