Kleine aanpassingen aan layout, subject to change

--- a/static/style.css
+++ b/static/style.css
@@ -49,3 +49,13 @@ table {
 a {
   color: black;
 }
+
+a:hover {
+  color: darkgrey;
+}
+
+.center {
+  margin: auto;
+  width: 50%;
+  text-align: center;
+}
