--- a/static/style.css
+++ b/static/style.css
@@ -47,15 +47,27 @@ table {
   border-spacing: 0; }
 
 a {
-  color: black;
-}
+  color: black; }
 
 a:hover {
-  color: darkgrey;
-}
+  color: darkgrey; }
 
 .center {
   margin: auto;
   width: 50%;
-  text-align: center;
-}
+  text-align: center; }
+
+body {
+  margin-top: 3% !important; }
+
+.search-bar {
+  margin: auto !important;
+  float: none !important; }
+
+.top-buffer {
+  margin-top: 20px; }
+
+.top-buffer-80 {
+  margin-top: 80px; }
+
+/*# sourceMappingURL=style.css.map */
