--- a/static/style.scss
+++ b/static/style.scss
@@ -59,3 +59,20 @@ a:hover {
   width: 50%;
   text-align: center;
 }
+
+body {
+  margin-top: 3% !important;
+}
+
+.search-bar {
+  margin:auto !important;
+  float: none !important;
+}
+
+.top-buffer { 
+  margin-top:20px; 
+}
+
+.top-buffer-80 { 
+  margin-top:80px; 
+}
