Zoekmachine uitgebreid naar twee opties, data teogevoegd aan pagina

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,8 @@
         <div class="row top-buffer-80">
             <div class="center">
                 <div class="col-lg-4"><a href="{{ url_for('artist', artist='phone') }}">Artists/Composers</a></div>
-                <div class="col-lg-4"><a href="{{ url_for('genre', genre='phone') }}">Genres</a></div>
-                <div class="col-lg-4"><a href="{{ url_for('song', song='phone') }}">Songs</a></div>
+                <div class="col-lg-4"><a href="{{ url_for('album', album='phone') }}">Genres</a></div>
+               <div class="col-lg-4"><a href="{{ url_for('song', song='phone') }}">Songs</a></div>
             </div>
         </div>
         </div>
