--- a/templates/album.html
+++ b/templates/album.html
@@ -5,15 +5,134 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{album}}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-    {{album}}
-    {{language}}
-    {{date}}
+<hr class="">
+<div class="container target">
+    <div class="row">
+        <div class="col-sm-10">
+             <h1 class="">{{album}}</h1>
+         
+        </div>
+      <div class="col-sm-2"><img class="img-circle img-responsive" src="{{imageLink}}">
 
-    <img src="{{imageLink}}" alt="">
-    <a href="{{amazonLink}}">Amazon Link</a>
-    
+        </div>
+    </div>
+  <br>
+    <div class="row">
+        <div class="col-sm-3">
+            <!--left col-->
+            <ul class="list-group">
+                <li class="list-group-item text-muted" contenteditable="false">Over dit album</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Taal</strong></span> {{ language }}</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Lanceer datum</strong></span>{{ date }}</li>
+                    <li class="list-group-item text-right"><span class="pull-left"><strong class="">Real name</strong></span> Joseph
+                        Doe</li>
+              <li class="list-group-item text-right"><span class="pull-left"><strong class="">Role: </strong></span> Pet Sitter
+               
+                      </li>
+            </ul>
+           <div class="panel panel-default">
+             <div class="panel-heading">Artiest
+
+                </div>
+                <div class="panel-body"><i class="fa fa-check-square"></i> <a href="../artist/{{maker}}" class="">{{maker}}</a>
+
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">Amazon link<i class="fa fa-link fa-1x"></i>
+
+                </div>
+                <div class="panel-body"><a href="{{amazonLink}}" class="">Amazon.com</a>
+
+                </div>
+            </div>
+          
+            <ul class="list-group">
+                <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i>
+
+                </li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Shares</strong></span> 125</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Likes</strong></span> 13</li>
+                    <li class="list-group-item text-right"><span class="pull-left"><strong class="">Posts</strong></span> 37</li>
+                        <li class="list-group-item text-right"><span class="pull-left"><strong class="">Followers</strong></span> 78</li>
+            </ul>
+        </div>
+        <!--/col-3-->
+        <div class="col-sm-9" style="" contenteditable="false">
+            <div class="panel panel-default">
+                <div class="panel-heading">Beschrijving van {{album}}</div>
+                <div class="panel-body"> Beschrijving.
+
+                </div>
+            </div>
+            <div class="panel panel-default target">
+                <div class="panel-heading" contenteditable="false">Andere albums van {{maker}}</div>
+                <div class="panel-body">
+                  <div class="row">
+				<div class="col-md-4">
+					<div class="thumbnail">
+						<img alt="300x200" src="https://via.placeholder.com/300.png/09f/fff">
+						<div class="caption">
+							<h3>
+								Album 1
+							</h3>
+							<p>
+								Titel album 1
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+						<img alt="300x200" src="https://via.placeholder.com/300.png/09f/fff">
+						<div class="caption">
+                            <h3>
+                                Album 2
+                            </h3>
+                            <p>
+                                Titel album 2
+                            </p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+						<img alt="300x200" src="https://via.placeholder.com/300.png/09f/fff">
+						<div class="caption">
+                            <h3>
+                                Album 3
+                            </h3>
+                            <p>
+                                Titel album 3s
+                            </p>
+                    </div>
+                </div>
+                 
+            </div>
+                     
+            </div>
+                 
+        </div>
+              
+    </div>
+           <div class="panel panel-default">
+                <div class="panel-heading">Nog wat info</div>
+                <div class="panel-body"> Schrijf hier nog iets leuks
+
+                </div>
+</div></div>
+
+
+            <div id="push"></div>
+        </div>
+        
+</div>
+        
 </body>
 </html>
