--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,9 @@
 
         <div class="row top-buffer-80">
             <div class="center">
-                <div class="col-lg-4"><a href="{{ url_for('artist', artist='phone') }}">Artists/Composers</a></div>
-                <div class="col-lg-4"><a href="{{ url_for('album', album='phone') }}">Genres</a></div>
-               <div class="col-lg-4"><a href="{{ url_for('song', song='phone') }}">Songs</a></div>
+                <div class="col-lg-4"><a class="vl artist-vl" href="{{ url_for('artist', artist='phone') }}">Artist</a></div>
+                <div class="col-lg-4"><a class="vl album-vl" href="{{ url_for('album', album='phone') }}">Album</a></div>
+                <div class="col-lg-4"><a class="vl track-vl" href="{{ url_for('track', track='phone') }}">Track</a></div>
             </div>
         </div>
         </div>
