--- a/templates/artist.html
+++ b/templates/artist.html
@@ -18,6 +18,9 @@
         <div class="col-sm-10">
              <h1 class="">{{artist}}</h1>
         </div>
+        <div class="col-sm-2"><img class="img-circle img-responsive" src="{{imageLink}}">
+
+        </div>
     </div>
   <br>
     <div class="row">
@@ -25,13 +28,10 @@
             <!--left col-->
             <ul class="list-group">
                 <li class="list-group-item text-muted" contenteditable="false">Over {{artist}}</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Taal</strong></span>{{country}}</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Lanceer datum</strong></span>x</li>
-                    <li class="list-group-item text-right"><span class="pull-left"><strong class="">Real name</strong></span> Joseph
-                        Doe</li>
-              <li class="list-group-item text-right"><span class="pull-left"><strong class="">Role: </strong></span> Pet Sitter
-               
-                      </li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Nationaliteit </strong></span>{{national}}</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Geboren op</strong></span>{{born}}</li>
+                    <li class="list-group-item text-right"><span class="pull-left"><strong class="">Gestorven op</strong></span> {{died}}</li>
+              <li class="list-group-item text-right"><span class="pull-left"><strong class="">Rol </strong></span> {{function}} </li>
             </ul>
            <div class="panel panel-default">
              <div class="panel-heading">Tags
