--- a/templates/track.html
+++ b/templates/track.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Song</title>
+    <title>{{track}}</title>
 </head>
 <body>
+    {{track}}
+    {{trackAlbums}}
+    {{tags}}
+    {{artist}}
+    {{date}}
+    {{length}}
 </body>
 </html>
