Final push succes jongens!

--- a/static/style.css
+++ b/static/style.css
@@ -58,9 +58,6 @@ a:hover {
   width: 50%;
   text-align: center; }
 
-body {
-  margin-top: 3% !important; }
-
 .search-bar {
   margin: auto !important;
   float: none !important; }
@@ -124,5 +121,29 @@ body {
 
 .track-vl {
   background: #e74c3c !important; }
+
+.header {
+  width: 100%;
+  padding: 20px; }
+  .header a {
+    color: white !important;
+    font-weight: bold;
+    font-size: 15px; }
+
+.album {
+  background: #e67e22; }
+
+.track {
+  background: #e74c3c; }
+
+.artist {
+  background: #8e44ad; }
+
+.h {
+  margin-bottom: 60px; }
+
+.r {
+  margin-top: 40px;
+  font-size: 18px; }
 
 /*# sourceMappingURL=style.css.map */
