--- a/templates/artist.html
+++ b/templates/artist.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{artist}}</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-        <p>.</p>
+<div class="header artist">
+    <a href="../">Terug naar home</a>
+</div>
 <hr class="">
 
 <div class="container target">
@@ -96,12 +99,7 @@
         </div>
               
     </div>
-           <div class="panel panel-default">
-                <div class="panel-heading">Nog wat info</div>
-                <div class="panel-body"> Schrijf hier nog iets leuks
-
-                </div>
-</div></div>
+       </div>
 
 
             <div id="push"></div>
