--- a/templates/artist.html
+++ b/templates/artist.html
@@ -51,7 +51,13 @@
                 <div class="panel-heading">Rating<i class="fa fa-link fa-1x"></i>
 
                 </div>
-                <span>{{rating}}/5</span>
+                <span> {{rating}} uit 5</span>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">Influencer<i class="fa fa-link fa-1x"></i>
+
+                </div>
+                <span> {{influencer}} </span>
             </div>
           
             <ul class="list-group">
