--- a/templates/track.html
+++ b/templates/track.html
@@ -32,7 +32,7 @@
             <!--left col-->
             <ul class="list-group">
                 <li class="list-group-item text-muted" contenteditable="false">Over {{artist}}</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Lengthe </strong></span>{{length}}</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Lengte </strong></span>{{length}} min.</li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Lanceerdatum</strong></span>{{date}}</li>
             </ul>
            <div class="panel panel-default">
