--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                 <div class="col-md-6 search-bar">
                     <div id="custom-search-input">
                         <div class="input-group col-md-12">
-                            <input class="form-control input-lg" type="text" name="fname" id="fname" onkeyup="myFunction(this.value)" placeholder="Artiest, genre of lied">
+                            <input class="form-control input-lg" type="text" name="fname" id="fname" onkeyup="myFunction(this.value)" placeholder="Artiest, album of track">
                             <span class="input-group-btn">
                                 <button class="btn btn-info btn-lg" type="button">
                                     <i class="glyphicon glyphicon-search"></i>
